--- a/viewer/renderer/event.html
+++ b/viewer/renderer/event.html
@@ -6,7 +6,6 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * gap:; script-src * 'unsafe-inline' 'unsafe-eval'; connect-src *; img-src * data: blob: android-webview-video-poster:; style-src * 'unsafe-inline';">
   <meta http-equiv="X-Content-Security-Policy" content="default-src 'self'; script-src 'self'">
   <title>拍手喝采イベント設定</title> 
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="./css/event.css">
 </head>
 <body>
@@ -18,9 +17,8 @@
       <div class="box">
         <button class="button" id="createBtn">URLをコピーする</button>
       </div>
-      <div class="result"></div>
       <div id="url" class="url">
-        https://pje4eh6ds8.execute-api.ap-northeast-1.amazonaws.com/Prod?id=a39a2b19-b80c-4f0b-b358-9bad2dc04093
+        イベントコードの取得に失敗しました<br>@takiguchi-yu に問い合わせてください
       </div>
     </div>
   </div>
