viewerデザイン修正

--- a/viewer/renderer/event.html
+++ b/viewer/renderer/event.html
@@ -9,19 +9,16 @@
   <link rel="stylesheet" href="./css/event.css">
 </head>
 <body>
-  <div class="card">
-    <div class="imgBox">
-      <img src="images/icon.png">
-    </div>
-    <div class="contents">
-      <div class="box">
-        <button class="button" id="createBtn">URLをコピーする</button>
-      </div>
-      <div id="url" class="url">
-        イベントコードの取得に失敗しました<br>@takiguchi-yu に問い合わせてください
-      </div>
-    </div>
+  <div class="logo">
+    <img src="images/icon.png">
   </div>
+  <div class="box">
+    <span></span>
+    <div class="card">
+      <button class="button" id="createBtn">URLをコピーする</button>
+      <p>イベントコードの取得に失敗しました<br>@takiguchi-yu に問い合わせてください</p>
+    </div>
+  </div> 
 
   <!-- You can also require other files to run in this process -->
   <script src="./js/event.js"></script>
