リアクション追加

--- a/client/index.html
+++ b/client/index.html
@@ -24,11 +24,15 @@
         <button id="ok"             style="--clr:#2922e6;" onclick="sendMessage(this.id)"><img src="images/ok.svg"></button>
         <button id="otsukare"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/otsukare.svg"></button>
         <button id="heart"          style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/heart.svg"></button>
-        <button id="elastic2"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/elastic2.svg"></button>
-        <button id="elasticsearch2" style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/elasticsearch2.svg"></button>
-        <button id="kibana2"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/kibana2.svg"></button>
+        <button id="cracker"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/cracker.svg"></button>
         <button id="aws1"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/aws1.svg"></button>
         <button id="aws2"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/aws2.svg"></button>
+        <button id="elastic2"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/elastic2.svg"></button>
+        <button id="kibana2"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/kibana2.svg"></button>
+        <button id="star"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/star.svg"></button>
+        <button id="personstanding" style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/personstanding.svg"></button>
+        <button id="manrisinghand"  style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/manrisinghand.svg"></button>
+        <button id="manok"          style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/manok.svg"></button>
       </div>
     </div>
   </section>
