--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,64 @@
   <title>拍手喝采クライアント</title>
   <link rel="shortcut icon" href="favicon.ico?d=1" type="image/x-icon">
   <link rel="stylesheet" href="style.css?d=1">
+
+<!-- 
+
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM5????HMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMB9<<<7"MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM5=??=??MMMMMMMMMMMMMB6?vTMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMM@!``.``.` TMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM#???=??dMMMMMMMMMMMB1=???=zMM
+MMMMMMMMMMMMMMMMMMMMM9+<<<?T@.`..`.`.`...TMMMMMMMMMMMMMMMMMMMMMMMMMMMMNI??=??uMMMMMMMMMM5+???=??1dMM
+MMMMMMMMMMMMMMMMMMM5;;;;;;;;<.`.`.`.`.``.`.TMMMMMMMMMMMMMMMMMMMMMMMMMMb?=??==dMMMMMMMMB3=?=??=?1gMMM
+MMMMMMMMMMMMMMMMMM$;<<<<<;;;;_.`.`.`.`.`..`.-TMMMMMMMMMMMMMMMMMMMMMMM#1??=??dMMMMMMMB(???=??=udMMMMM
+MMMMMMMMMMMMMMMMM#^_..``.._<;;_.`.`.`.`.`.`.``_TMMMMMMMMMMMMM@""""TMMMNx??=gMMMMMM#6??=???=1jMMMMMMM
+MMMMMMMMMM#57dHMM{.`.`.`.`.._<;;_..`.`.`.`.`..`.(WMMMWWMMMM@!.``.`.`?MMMNNMMMMMMM@???=?=?1+MMMMMMMMM
+MMMMMMMM8;;;;;;;<-`.`.`.`.```._<;<-..``.`.`.``.``.-;;;;;;?Y.`..`.`.`..?MMMMMMMMMMRz?=??<gMMMMMMMMMMM
+MMMMMM#(;;;;;;;;;_.`.`.`.`..``. _<;<- .`.`.`..`..`. ~<;;;;<`.``.`.`.``. ?MMMMMMMMMNeaagMMMMMMMMMMMMM
+MMMMMM$;;;;;;;;;;;_..``.`.`..``.` _<;<- `.`.``.``.`..-~;;;<_.`.`.`.`.```. ?MMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMR<;;;;;;;;;;;;_..`.``.`..``.` ~<;<- .`.`..`.``.`.-~;;<-.`.`.`...`.``.`7MMMMMMMMMMMMMMMBTT??=1T
+MMMMMMMm+;;;;;;<<<;;;<_..`.`.`.`.`.`. ~;;<- `.``.`.`.`.`.-<;;<-..`.``..`.`.`. TMMMMMMMMM5z?=????????
+MMMMMMMMMm+;<!_.`.._~<;<- .``.`.`.`.``.-~<;<-.`.`.`.`.`.``._<;;<-.`.``.`..`.``..TMMMMMMC??=??=?=?=1x
+MMMMMMMHMMN__.``.``.. ~<;<- .`.`.`.`.`.`.-~;;<-.`..`.`.`.```._<;;<_..``.``.`.`.`..TMMMMp????=1uggNMM
+MMM5;;;;;<?.`..`..```.` ~;;<- `.`.`.`.`.`..-~;;<-``.`.`.`..``.`_<;;<-..`.`.`..`.`..-TMMMggggNMMMMMMM
+M@;;;;;;;;;_.``.`..`.`.`. ~;;<-.`.`.`.`.```.`-<;;<-.`.`.`.`..`..._<;;_-.`.`.``.`.``.`_TMMMMMMMMMMMMM
+M3;;;;;;;;;;_..``.`.`.`.`.`-~;;<-.``.`.`..``.`._<;;<_..`.`.`.``.`.._<;;_-.`.`.`.`..`.`.-WMMMMMMMMMMM
+MJ;;;;;;;;;;;<- .`.`.`.`.`.`.-~;;<-.`.`.`..`.``.._<;;_-.`.`.`.``.``.`_<<;_..`..`.``.``.`.(WMMMMMMMMM
+MN+;;;;;;;;;;;;<-.`.`.`.`.`.`.`_<;;<-..``.`.`.```.._<;;_-`.`...`.`.`...._<<_.``.`..`..``.`.(MMMMMMMM
+MMNe<;;;;;;;;;;;;<-.`.`.`.`.``.`._<;;<-..`.`...`.``.._<!_`.```..`.`.````.`.`.`.`.``.`.`.`.`..MMMMMMM
+MMMMMm+;>;;;;;;;;;;<-`.`.`.`..`.``._<;;_-.``.``..`.``.``..`..``.`.`..`..`.`.`.`.`..`.`.`.`.`..MMMMMM
+MMMMMMMm+;;<~_..__<;;<-.`.`.`.`.`.``._<;;_-.`.`.`.`.`..``.`.`..`.`.``.`.``.`.`.`.``.`.`.`.`.`..dMMMM
+MMMMMMMMMP_.``.```._<;;<-..`.`.`.`..`.`_<;;_-.``.`.`.`..``.`.``.`.`.`.``..`.`.`.`..`.`.`.`.```..MMMM
+MMEY<;;(T!.`.``.`.``._<;;<-.`.`.`.``.`..._<;;_..`.`.``.`..`.`..`.`.`.`..`.`.`.`.`.`.`.`.`.`..``.?MMM
+#>;;;;;;;_.`..`..`..`.._<;;_-.`.`..`.``.`.._<<_.`.`..``.``.`.``.`.`.`.`.``.`.`.`.`.`.`.`.`.`..`..MMM
+;;;;;;;;;;_.``.``.``.``.._<;;_-`.``.`..``.``..``.`.`..`..`.`.`.`.`.`.`.`..`.`.`.`.`.`.`.`.`.``.`.JMM
+;;;;;;;;;;;<-.`..`.`.`.`..`_<;;_-.`.`.`..`.``..`.`.``.``..`.`.`.`.`.`.`.`.`.`.`.`.``.`.`.`.`..`..(MM
+p;;;;;;;;;;;;<-.`.`.`.`.``.`._<;;_..``.``.`..``.`.`..`.``.`.`.`.`.`.`.``.`.`.`.`.`..`.`.`.`.``.``.MM
+Mb<;;;;;;;;;;;;_-.`..`.`..`.``._<;;_..`..`.`.`.`.`.``..`.`.`.`.`.`.`.`..`.`.`.`.`.``.`.`.`.`.`.`..MM
+MMMN+;;;;;;;;;;;;_-`.``.``.`.`.` _<;<-..`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.``.`.`.`.`.`..`.`.`.`.`.`.`.MM
+MMMMMm+;;;;;;;;;;;;_..`..`.`..`.`. _<<_`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`..`.`.`.`.`.``.`.`.`.`.`.`..MM
+MMMMMMMm+;;;;;;;;;;;;_.`.``.``.`.``. _.`.``.`.`.`.`.`.`.`.`.`.`.`.`.`.``.`.`.`.`.`..`.`.`.`.`.`...MM
+MMMMMMMMMNx;;;;;;;;;;;<_..`.`.`.`..``.`.`..`.`.`.`.`.`.`.`.`.`.`.`.`.`..`.`.`.`.`.``.`.`.`.`.`.`` dM
+MMMMMMMMMMMNJ;;;;;;;;;;;;-..`..`.`.`.`.`.``.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.(H
+MMMMMMMMMMMMMNx<;;;;;;;;;;<- ``.`.`.`.`.`..`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.-
+MMMMMMM#HHHHMMMNa<;;;;;;;;;;<- `.`.`.`.`.``.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.
+MMM96+??????vMMMMNe<;;;;;;;;;;<-.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`..
+(??????=????uMMMMMMNe;;;;;;;;;;;<-.``.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`..d
+????=??=?u&gMMMMMMMMMNx+;;;;;;;;;;<-.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.(MM
+gc?1zgggMMMMMMMMMMMMMMMNJ+;;;;;;;;;;<-..`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`. .MMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMm+;;;;;;;;;;<-.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.` .MMMMMM
+MMMMMMMMMMMMMWOO?MMMMMMMMMMMe<;;;;;;;;;;<-.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`..`.MMMMMMMM
+MMMMMMMMMMM8+?????dMMMMMMMMMMNm+;;;;;;;;;;_-.``.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.dMMMMMMMMM
+MMMMMMMMMB1????=?=jMMMMMMMMMMMMMN+;;;;;;;;;;<-..`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`...dMMMMMMMMMMM
+MMMMMMMB=????=??dMMMMMMM5???=jMMMMNx;;;;;;;;;;;<-...``.`.`.`.`.`.`.`.`.`.`.`.`.`.`.`..dMMMMMMMMMMMMM
+MMMMMBC????=?=aMMMMMMMME??=??1MMMMMMNm+;;;;;;;;;;;;<---...`.`.`.`.`.`.`.`.`.`.`.`.`.gMMMMMMMMMMMMMMM
+MMMB1???=?=?uMMMMMMMMM@??=???dMMMMMMMMMMNa++;;;;;;;;;;;;;;;<__--...`.`.`.`.`.`.`..+MMMMMMMMMMMMMMMMM
+MM8????=?=ugMMMMMMMMMN1?=??=uMMMMMMMMMMMMMMMMNg+++++<;;;;;;;;;;;;;_- ``.`.`.`.`.(MMMMMMMMMMMMMMMMMMM
+MMs??=??1gMMMMMMMMMMMD???=??MMMMMMMMMMMMMMMMMMMMMMMMMMMNag+;;;;;;;;;;<--.`.`..(MMMMMMMMMMMMMMMMMMMMM
+MMNgezadMMMMMMMMMMMMN=??=??dMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMNNJ+;;;;;;+jMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMN1=??gMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+
+-->
+
 </head>
 <body>
   <section>
