ほぼミュート機能追加

--- a/client/index.html
+++ b/client/index.html
@@ -72,7 +72,7 @@ MMMMMMMMMMMMMMMMMMMMMN1=??gMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
       <h2>今の気分は？</h2>
       <div class="reactions">
         <button id="pachipachi1"    style="--clr:#ff22bb;" onclick="sendMessage(this.id)"><img src="images/pachipachi1.svg"></button>
-        <button id="pachipachi2"    style="--clr:#00ccff;" onclick="sendMessage(this.id)"><img src="images/pachipachi2.svg"></button>
+        <button id="pachipachi3"    style="--clr:#00ccff;" onclick="sendMessage(this.id)"><img src="images/pachipachi3.svg"></button>
         <button id="iine"           style="--clr:#22e622;" onclick="sendMessage(this.id)"><img src="images/iine.svg"></button>
         <button id="naruhododesu"   style="--clr:#fabc4a;" onclick="sendMessage(this.id)"><img src="images/naruhododesu.svg"></button>
         <button id="wakaru"         style="--clr:#f6f207;" onclick="sendMessage(this.id)"><img src="images/wakaru.svg"></button>
@@ -80,17 +80,19 @@ MMMMMMMMMMMMMMMMMMMMMN1=??gMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         <button id="oo1"            style="--clr:#9e22e6;" onclick="sendMessage(this.id)"><img src="images/oo1.svg"></button>
         <button id="suge"           style="--clr:#e622bc;" onclick="sendMessage(this.id)"><img src="images/suge.svg"></button>
         <button id="ok"             style="--clr:#2922e6;" onclick="sendMessage(this.id)"><img src="images/ok.svg"></button>
-        <button id="otsukare"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/otsukare.svg"></button>
+        <button id="otsukare2"      style="--clr:#7a4848;" onclick="sendMessage(this.id)"><img src="images/otsukare2.svg"></button>
         <button id="heart"          style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/heart.svg"></button>
-        <button id="cracker"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/cracker.svg"></button>
-        <button id="aws1"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/aws1.svg"></button>
-        <button id="aws2"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/aws2.svg"></button>
-        <button id="elastic2"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/elastic2.svg"></button>
-        <button id="kibana2"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/kibana2.svg"></button>
         <button id="star"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/star.svg"></button>
-        <button id="personstanding" style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/personstanding.svg"></button>
+        <button id="cracker"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/cracker.svg"></button>
+        <button id="thumbsup"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/thumbsup.svg"></button>
         <button id="manrisinghand"  style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/manrisinghand.svg"></button>
         <button id="manok"          style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/manok.svg"></button>
+        <button id="people"         style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/people.svg"></button>
+        <button id="people2"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/people2.svg"></button>
+        <button id="aws1"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/aws1.svg"></button>
+        <button id="elastic2"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/elastic2.svg"></button>
+        <button id="pecori"         style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/pecori.gif"></button>
+        <button id="partymimcat"    style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/partymimcat.gif"></button>
       </div>
     </div>
   </section>
