--- a/client/index.html
+++ b/client/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>拍手喝采クライアント</title>
-  <link rel="shortcut icon" href="favicon.ico?d=1" type="image/x-icon">
-  <link rel="stylesheet" href="style.css?d=1">
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 
 <!-- 
 
@@ -96,6 +96,6 @@ MMMMMMMMMMMMMMMMMMMMMN1=??gMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
       </div>
     </div>
   </section>
-  <script src="script.js?d=1"></script>
+  <script src="script.js"></script>
 </body>
 </html>
