複数モニターに対応（すべてのモニターに描画実装）

--- a/client/index.html
+++ b/client/index.html
@@ -91,8 +91,12 @@ MMMMMMMMMMMMMMMMMMMMMN1=??gMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
         <button id="people2"        style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/people2.svg"></button>
         <button id="aws1"           style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/aws1.svg"></button>
         <button id="elastic2"       style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/elastic2.svg"></button>
-        <button id="pecori"         style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/pecori.gif"></button>
-        <button id="partymimcat"    style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/partymimcat.gif"></button>
+        <button id="clapped02"      style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/clapped02.gif"></button>
+        <button id="clapped03"      style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/clapped03.gif"></button>
+        <button id="ika"            style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/ika.png"></button>
+        <button id="paint_violet"   style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/paint_violet.svg"></button>
+        <button id="paint_green"    style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/paint_green.svg"></button>
+        <button id="paint_pink"     style="--clr:#ffffff;" onclick="sendMessage(this.id)"><img src="images/paint_pink.svg"></button>
       </div>
     </div>
   </section>
